--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 /* Main page with stikky-footer */
 html, body {
-  height: 120%;
-  background-image: linear-gradient(to bottom right, #889e83, #9ba2ba);
+  height: 105%;
+  background-image: linear-gradient(to bottom right, #A3BCB6, #DADED4);
   font-family: Arial, Helvetica, sans-serif;
   /* The html and body elements cannot have any padding or margin. */
-  border-top: 10px solid #889e83;
+  border-top: 2px solid #A3BCB6;
 }
 
 /* Wrapper for page content to push down footer */
@@ -189,7 +189,7 @@ html, body {
 	color: #292A27;
 }
 div.footer{
-  border-bottom: 20px solid #ffffff;;
+  border-bottom: 0px solid #ffffff;;
 }
 /* Set the fixed height of the footer here */
 /*.footer {
